--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 	  <ul>
-		  <li><a href="Assignment_1.html">Home</a></li>
+		  <li><a href="index.html">Home</a></li>
 		  <li><a href="interests.html">Interests</a></li>
 		  <li><a href="map.html">Travel</a></li>
 	  </ul>
