--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<body>
 	  <ul>
 		  <li><a href="index.html">Home</a></li>
-		  <li><a href="CRP458/Interests.html">Interests</a></li>
-		  <li><a href="CRP458/map.html">Travel</a></li>
+		  <li><a href="Interests.html">Interests</a></li>
+		  <li><a href="map.html">Travel</a></li>
 	  </ul>
 
 	  <hr>
