--- a/map.html
+++ b/map.html
@@ -4,9 +4,9 @@
   <title>Assignment 1</title>
   <body>
      <ul>
-      <li><a href="CRP458/index.html">Home</a></li>
-      <li><a href="CRP458/Interests.html">Interests</a></li>
-      <li><a href="CRP458/map.html">Travel</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="Interests.html">Interests</a></li>
+      <li><a href="map.html">Travel</a></li>
     </ul>
     <hr>
     <br>
