--- a/Interests.html
+++ b/Interests.html
@@ -5,9 +5,9 @@
 </head>
   <body>
     <ul>
-      <li><a href="/index.html">Home</a></li>
-      <li><a href="/Interests.html">Interests</a></li>
-      <li><a href="/map.html">Travel</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="Interests.html">Interests</a></li>
+      <li><a href="map.html">Travel</a></li>
     </ul>
     <hr>
     <br>
