--- a/map.html
+++ b/map.html
@@ -10,6 +10,6 @@
     </ul>
     <hr>
     <br>
-   <img src="https://imgur.com/a/pUYSt">
+   <img src="https://www.icloud.com/iclouddrive/01vkZyVwC5ZiF4wTpMfSLbXOw#Summer.png">
   </body>
 </html>
