--- a/map.html
+++ b/map.html
@@ -10,6 +10,6 @@
     </ul>
     <hr>
     <br>
-   <img src="https://drive.google.com/file/d/0BwRe1Um8ER-ETHZUMGRqVXZLYUE/view?usp=sharing">
+   <img src="summer.jpg">
   </body>
 </html>
