--- a/Assignment _1/index.html
+++ b/Assignment _1/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 	  <ul>
-		  <li><a href="crp458">Home</a></li>
+		  <li><a href="Assignment_1/index.html">Home</a></li>
 		  <li><a href="Interests.html">Interests</a></li>
 		  <li><a href="map.html">Travel</a></li>
 	  </ul>
