--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 	  <ul>
-		  <li><a href="assignment_1.html">Assignment 1</a></li>
+		  <li><a href="assignment_1/assignment_1.html">Assignment 1</a></li>
 	  </ul>
 
 	  <hr>
