changed 'interstate' to 'Interstate'

--- a/Assignment_3/index.html
+++ b/Assignment_3/index.html
@@ -58,7 +58,7 @@ li a {
       <li><a href="#" onclick="changeMap('vineyards')">Vineyards</a></li>
       <li><a href="#" onclick="changeMap('scenicByways_border')">Scenic Byways</a></li>
       <li><a href="#" onclick="changeMap('loessHills')">Loess Hills</a></li>
-      <li><a href="#" onclick="changeMap('interstate')">Interstate</a></li>   
+      <li><a href="#" onclick="changeMap('Interstate')">Interstate</a></li>   
     </ul>
     <H2>Iowa</H2>
     
