--- a/Assignment_1/map.html
+++ b/Assignment_1/map.html
@@ -11,7 +11,7 @@
     <hr>
     <br>
     <a href="https://en.wikipedia.org/wiki/Anfield">
-      <img src="images/Anfield Stadium.png" style= "max-height: 600px"; "max-width: 400px";>
+      <img src="Images/Anfield Stadium.png" style= "max-height: 600px"; "max-width: 400px";>
     </a>
   </body>
 </html>
