--- a/Assignment_1/Interests.html
+++ b/Assignment_1/Interests.html
@@ -12,6 +12,6 @@
     <hr>
     <br>
     <p align="center" style="font-size: 20px">Last summer I was fortunate to travel around Europe and Morocco. I started in Paris and headed south through Marseille onto Barcelona and finally to Morocco. I hope to be learn more about coding and use this for any future coding work I might do.</p>
-    <img src="images/summer.jpg" style= "max-height: 600px"; "max-width: 400px";>
+    <img src="Images/summer.jpg" style= "max-height: 600px"; "max-width: 400px";>
   </body>
 </html>
