--- a/Assignment7/index1.html
+++ b/Assignment7/index1.html
@@ -2,13 +2,10 @@
 <html>
 <head>
     <title>Iowa</title>
-    	<script src="script.js">
-    </script>
-    <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
+    	<script src="script.js"
+    src="https://code.jquery.com/jquery-2.2.4.js"></script>
 	<link rel="stylesheet" href="css/styles.css?v=1.0">
-     <link rel = "stylesheet"
-   type = "text/css"
-   href = "stylesheet.css" />
+     <link rel = "stylesheet" type = "text/css" href = "stylesheet.css" />
 </head>
 <body>
     <div id="menu-container">
