--- a/Assignment7/index1.html
+++ b/Assignment7/index1.html
@@ -2,10 +2,15 @@
 <html>
 <head>
     <title>Iowa</title>
-    	<script src="script.js"
-    src="https://code.jquery.com/jquery-2.2.4.js"></script>
+    	<script src="https://code.jquery.com/jquery-2.2.4.js">
+    </script>
+    <script src="script.js" >
+    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="css/styles.css?v=1.0">
-     <link rel = "stylesheet" type = "text/css" href = "stylesheet.css" />
+     <link rel = "stylesheet"
+   type = "text/css"
+   href = "stylesheet.css" />
 </head>
 <body>
     <div id="menu-container">
