--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -19,11 +19,24 @@
 }
 #header, #footer {
 	padding: 10px;
-	background-color: slategray;
+    color: black;
+	background-color: whitesmoke;
 	color: white;
 	text-align: center;
 }
+h1, p{
+       color: black;
+       }
+a:link {
+    color: black;
+}
 
+/* visited link */
+a:visited {
+    color: black;
+}
+
+       }
 #css {
     background: #649173;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #DBD5A4, #649173);  /* Chrome 10-25, Safari 5.1-6 */
@@ -50,7 +63,7 @@ background: linear-gradient(to right, #DBD5A4, #649173); /* W3C, IE 10+/ Edge, F
 <p>Below are links to each assignment.<p> 
 <br>
          </p>
-    
+ <div id="link">   
 <a href="https://w124gb.github.io/crp458/Assignment_1">Assignment 1</a>
   <br>
 <a href="https://w124gb.github.io/crp458/Assignment_2">Assignment 2</a>
@@ -100,8 +113,10 @@ background: linear-gradient(to right, #DBD5A4, #649173); /* W3C, IE 10+/ Edge, F
 <a href="https://w124gb.github.io/crp458/miniMap">Mini Map</a>
   <br>
 <a href="https://w124gb.github.io/crp458/Final/pct.html">Final</a>
+     
+     </div>
 
-    <div id = "footer"><i>Iowa State University</i></div>
+    <div id = "footer"><p><i>Iowa State University</i></p></div>
          </div>
     </container>
     </body> 
