updated 14 with working earthquake data

--- a/Assignment_14/index.html
+++ b/Assignment_14/index.html
@@ -23,11 +23,12 @@
     <h3> Assignment 14</h3>
    </div>
       <div id="map"></div>
-      <div id = "footer"><i>Iowa State University</i></div>
+        <div id = "footer">
+        <strong>Earthquakes in the Last 24 hours: </strong><span id = "totalNumber"></span><br> 
+      <input type="button" name="button" id="clearLayers" value="Clear">
+      <i>Iowa State University</i></div>
       </div>
       
-<strong>Earthquakes in the Last 24 hours: </strong><span id = "totalNumber"></span><br> 
-      <input type="button" name="button" id="clearLayers" value="Clear">
       
       <script src="script.js"></script>
     </body>
