added ability to open new tab onclick

--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -64,55 +64,55 @@ background: linear-gradient(to right, #DBD5A4, #649173); /* W3C, IE 10+/ Edge, F
 <br>
          </p>
  <div id="link">   
-<a href="https://w124gb.github.io/crp458/Assignment_1">Assignment 1</a>
+<a href="https://w124gb.github.io/crp458/Assignment_1"target="_blank">Assignment 1</a>
   <br>
-<a href="https://w124gb.github.io/crp458/Assignment_2">Assignment 2</a>
+<a href="https://w124gb.github.io/crp458/Assignment_2"target="_blank">Assignment 2</a>
   <br>
-<a href="https://w124gb.github.io/crp458/Assignment_3">Assignment 3</a>
+<a href="https://w124gb.github.io/crp458/Assignment_3"target="_blank">Assignment 3</a>
   <br>
-<a href="https://w124gb.github.io/crp458/Assignment4">Assignment 4</a>
+<a href="https://w124gb.github.io/crp458/Assignment4"target="_blank">Assignment 4</a>
   <br>
-<a href="https://w124gb.github.io/crp458/Assignment5">Assignment 5</a>
+<a href="https://w124gb.github.io/crp458/Assignment5"target="_blank">Assignment 5</a>
  <br>
-<a href="https://w124gb.github.io/crp458/assignment6">Assignment 6</a>
+<a href="https://w124gb.github.io/crp458/assignment6"target="_blank">Assignment 6</a>
  <br>
-<a href="https://w124gb.github.io/crp458/Assignment7">Assignment 7</a>
+<a href="https://w124gb.github.io/crp458/Assignment7"target="_blank">Assignment 7</a>
   <br>
-<a href="https://w124gb.github.io/crp458/Assignment8">Assignment 8</a>
+<a href="https://w124gb.github.io/crp458/Assignment8"target="_blank">Assignment 8</a>
   <br>
-<a href="https://w124gb.github.io/crp458/Assignment_9">Assignment 9</a>
+<a href="https://w124gb.github.io/crp458/Assignment_9"target="_blank">Assignment 9</a>
   <br>
-<a href="https://w124gb.github.io/crp458/Assignment_10">Assignment 10</a>
+<a href="https://w124gb.github.io/crp458/Assignment_10"target="_blank">Assignment 10</a>
   <br>
-<a href="https://w124gb.github.io/crp458/Assignment_11">Assignment 11</a>
+<a href="https://w124gb.github.io/crp458/Assignment_11"target="_blank">Assignment 11</a>
   <br>
-<a href="https://w124gb.github.io/crp458/Assignment_12">Assignment 12</a>
+<a href="https://w124gb.github.io/crp458/Assignment_12"target="_blank">Assignment 12</a>
   <br>
-<a href="https://w124gb.github.io/crp458/Assignment_13">Assignment 13</a>
+<a href="https://w124gb.github.io/crp458/Assignment_13"target="_blank">Assignment 13</a>
   <br>
-<a href="https://w124gb.github.io/crp458/Assignment_14">Assignment 14</a>
+<a href="https://w124gb.github.io/crp458/Assignment_14"target="_blank">Assignment 14</a>
   <br>
-<a href="https://w124gb.github.io/crp458/">Assignment 15</a>
+<a href="https://w124gb.github.io/crp458/"target="_blank">Assignment 15</a>
   <br>
-<a href="https://w124gb.github.io/crp458/">Assignment 16</a>
+<a href="https://w124gb.github.io/crp458/"target="_blank">Assignment 16</a>
   <br>
-<a href="https://w124gb.github.io/crp458/">Assignment 17</a>
+<a href="https://w124gb.github.io/crp458/"target="_blank">Assignment 17</a>
   <br>
-<a href="https://w124gb.github.io/crp458/">Assignment 18</a>
+<a href="https://w124gb.github.io/crp458/"target="_blank">Assignment 18</a>
   <br>
-<a href="https://w124gb.github.io/crp458/Assignment_19">Assignment 19</a>
+<a href="https://w124gb.github.io/crp458/Assignment_19"target="_blank">Assignment 19</a>
   <br>
-<a href="https://w124gb.github.io/crp458/">Assignment 20</a>
+<a href="https://w124gb.github.io/crp458/"target="_blank">Assignment 20</a>
   <br>
-<a href="https://w124gb.github.io/crp458/">Assignment 22</a>
+<a href="https://w124gb.github.io/crp458/"target="_blank">Assignment 22</a>
   <br>
-<a href="https://w124gb.github.io/crp458/Assignment_24">Assignment 24</a>
+<a href="https://w124gb.github.io/crp458/Assignment_24"target="_blank">Assignment 24</a>
   <br>
-<a href="https://w124gb.github.io/crp458/Assignment_25">Assignment 25</a>
+<a href="https://w124gb.github.io/crp458/Assignment_25"target="_blank">Assignment 25</a>
   <br>
-<a href="https://w124gb.github.io/crp458/miniMap">Mini Map</a>
+<a href="https://w124gb.github.io/crp458/miniMap"target="_blank">Mini Map</a>
   <br>
-<a href="https://w124gb.github.io/crp458/Final/pct.html">Final</a>
+<a href="https://w124gb.github.io/crp458/Final/pct.html"target="_blank">Final</a>
      
      </div>
 
